--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,17 @@ body {
   display: flex;
   box-shadow: 0px 10px 6px -6px rgba(48, 47, 47, 0.2);
 }
+.logo-edit p{
+  padding-left: 15px;
+  padding-top: 10px;
+  font-weight: bold;
+}
 
+.logo-edit img{
+  max-width:55px;
+  height: auto;
+  margin-left:-45px;
+}
 ul.list-unstyled li a {
   text-decoration: none;
   color: rgb(255, 255, 255);
